// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator Intersection Renames > array intersection types - renamed 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,7 +1,15 @@
export interface Combined {
-  data: ARenamed;
+  data: (A | B)[];
}

-export interface ARenamed {
+export interface A {
+  extraA: boolean;
+
  propA: string;
}
+
+export interface B {
+  extraB: Date;
+
+  propB: number;
+}"
`;

exports[`Comparator Intersection Renames > interface with intersection types - renamed 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,13 +1,27 @@
export interface EnhancedUser {
-  user: BaseUserRenamed & UserPermissionsRenamed;
+  isAdmin: boolean;
+
+  user: BaseUserRenamed & UserPermissionsRenamed & UserMetadata;
}

export interface BaseUserRenamed {
+  email: string;
+
  id: number;
+
  name: string;
}

export interface UserPermissionsRenamed {
-  canEdit: boolean;
+  canCreate: boolean;
+
  canDelete: boolean;
+
+  canEdit: boolean;
}
+
+export interface UserMetadata {
+  lastLogin: Date;
+
+  loginCount: number;
+}"
`;

exports[`Comparator Intersection Renames > inverse array intersection types - renamed 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,13 +1,7 @@
export interface Combined {
-  data: (ARenamed | BRenamed)[];
+  data: A;
}

-export interface ARenamed {
+export interface A {
  propA: string;
-  extraA: boolean;
}
-
-export interface BRenamed {
-  propB: number;
-  extraB: Date;
-}"
`;

exports[`Comparator Intersection Renames > map intersection type with mismatch - renamed 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,7 +1,7 @@
export interface Config {
-  map: ObservableMap<15, PopupRenamed<string>> & ObservableMap<string, PopupRenamed>;
+  map: ObservableMap<string, PopupRenamed<string>> & ObservableMap<string, PopupRenamed>;
}

export interface PopupRenamed<T extends (number | string) = number> {
  id: T;"
`;

exports[`Comparator Intersections > array intersection types 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,7 +1,15 @@
export interface Combined {
-  data: A;
+  data: (A | B)[];
}

export interface A {
+  extraA: boolean;
+
  propA: string;
}
+
+export interface B {
+  extraB: Date;
+
+  propB: number;
+}"
`;

exports[`Comparator Intersections > interface with intersection types 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,13 +1,27 @@
export interface EnhancedUser {
-  user: BaseUser & UserPermissions;
+  isAdmin: boolean;
+
+  user: BaseUser & UserPermissions & UserMetadata;
}

export interface BaseUser {
+  email: string;
+
  id: number;
+
  name: string;
}

export interface UserPermissions {
-  canEdit: boolean;
+  canCreate: boolean;
+
  canDelete: boolean;
+
+  canEdit: boolean;
}
+
+export interface UserMetadata {
+  lastLogin: Date;
+
+  loginCount: number;
+}"
`;

exports[`Comparator Intersections > intersection type vs primitive 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface Foo {
-  value: { a: number; } & { b: string; };
+  value: number;
}"
`;

exports[`Comparator Intersections > inverse array intersection types 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,13 +1,7 @@
export interface Combined {
-  data: (A | B)[];
+  data: A;
}

export interface A {
  propA: string;
-  extraA: boolean;
}
-
-export interface B {
-  propB: number;
-  extraB: Date;
-}"
`;

exports[`Comparator Intersections > map intersection type with mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,7 +1,7 @@
export interface Config {
-  map: ObservableMap<15, Popup<string>> & ObservableMap<string, Popup>;
+  map: ObservableMap<string, Popup<string>> & ObservableMap<string, Popup>;
}

export interface Popup<T extends (number | string) = number> {
  id: T;"
`;
